:rocket: [ DEPLOY ] Config

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,8 @@ RUN apk add --no-cache curl dumb-init \
     && addgroup -g 1001 -S nodejs \
     && adduser -S nodeuser -u 1001
 
-COPY package.json ./
-RUN npm install --production && npm cache clean --force
+COPY package*.json ./
+RUN npm ci --only=production && npm cache clean --force
 
 COPY . .
 
