--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,6 +1,13 @@
 node_modules
-npm-debug.log
-.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+uploads/
+.DS_Store
+Thumbs.db
+tests/
+bun.lock
 .git
 .gitignore
 README.md
