--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,6 +1,10 @@
 node_modules
-npm-debug.log
-.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+.DS_Store
+Thumbs.db
 .git
 .gitignore
 README.md
