--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 3000;
+    listen 80;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
@@ -26,23 +26,6 @@ server {
         application/atom+xml
         image/svg+xml;
 
-    # Proxy API calls to backend
-    location /api/ {
-        # Use backend service URL that Coolify will provide
-        proxy_pass http://backend:5000/api/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        proxy_ssl_verify off;
-    }
 
     # Handle React Router (SPA)
     location / {
@@ -58,7 +41,14 @@ server {
     # Health check endpoint
     location /health {
         access_log off;
-        return 200 "healthy\n";
+        return 200 "Frontend OK - nginx serving static files\n";
+        add_header Content-Type text/plain;
+    }
+
+    # Debug endpoint
+    location /debug {
+        access_log off;
+        return 200 "nginx config OK, serving from /usr/share/nginx/html\n";
         add_header Content-Type text/plain;
     }
 }
